--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -1,5 +1,11 @@
 ﻿@charset "UTF-8";
 /* -------------------------------------------------------------------------------------------------------------------
+                                                    VARIABLES
+ ------------------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------------------
+                                                    MIXINS
+ ------------------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------------------
                                                     GENERAL ATTRIBUTES
  ------------------------------------------------------------------------------------------------------------------- */
 html, body {
@@ -513,9 +519,4 @@ img {
     display: none; }
   #navSmall #third {
     display: none; }
-
-iframe#matchResult {
-  display: none !important;
-  visibility: hidden !important;
-  opacity: 0 !important; }
 
