--- a/Gobot/Gobot/Content/Watch.scss
+++ b/Gobot/Gobot/Content/Watch.scss
@@ -1,6 +1,4 @@
-﻿@import 'global';
-
-#main { height: auto !important; }
+﻿#main { height: auto !important; }
 #video { width: 100% !important; }
 
 @media screen and (min-width: 1520px) {
