--- a/Gobot/Gobot/Views/Bet/ad.cshtml
+++ b/Gobot/Gobot/Views/Bet/ad.cshtml
@@ -4,3 +4,4 @@
     ViewBag.Keywords = "Annonce, récompenses, crédits, pub, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@Styles.Render("~/Content/Account.min.css")
