--- a/Gobot/Gobot/Content/Register.css
+++ b/Gobot/Gobot/Content/Register.css
@@ -1,4 +1,10 @@
 ﻿/* -------------------------------------------------------------------------------------------------------------------
+                                                    VARIABLES
+ ------------------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------------------
+                                                    MIXINS
+ ------------------------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------------------
                                                     GENERAL ATTRIBUTES
  ------------------------------------------------------------------------------------------------------------------- */
 html, body {
