--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -1,30 +1,8 @@
-﻿/* -------------------------------------------------------------------------------------------------------------------
+﻿@import '_utils.scss';
+
+/* -------------------------------------------------------------------------------------------------------------------
                                                     GENERAL ATTRIBUTES
  ------------------------------------------------------------------------------------------------------------------- */
-
-// VARIABLES
-
-$menuColor: #f16651;
-$menuColor_active: #e3604c;
-$menuColor_active_borderTop: #cc5644;
-$menuColor_active_borderRight: #a84739;
-$menuColor_Ink: #a74232;
-
-$darkerGrey: #1f1f1f;
-$darkGrey2: #2d2d2d;
-$darkGrey: #323232;
-$grey: #626262;
-$lightGrey: #5f5f5f;
-$green: #51c24b;
-$red: #963434;
-$off-white: #eeeeee;
-$orange: #ffbf5c;
-
-$font: Lato, Arial, sans-serif;
-$infoBgColor: #232323;
-$maxContainerWidth: 1350px;
-
-// GENERAL
 
 html, body {
 	position: absolute;
@@ -47,12 +25,12 @@ img                         { border: 0; }
 .show { visibility: visible; opacity: 1; }
 .hide { visibility: hidden; opacity: 0; }
 
-.grey, grey   { color: $grey !important; }
-.green, green  { color: $green; }
-.red, red    { color: $red; }
-.white, white  { color: white; }
+.grey, grey     { color: $grey !important; }
+.green, green   { color: $green; }
+.red, red       { color: $red; }
+.white, white   { color: white; }
 .orange, orange { color: $orange; }
-.offw, offw { color: $off-white; }
+.offw, offw     { color: $off-white; }
 
 #header {
     background-color: $darkGrey;
@@ -65,27 +43,6 @@ img                         { border: 0; }
         text-align: center;
         margin: 90px 0 70px 0;
     }
-}
-
-@mixin box-shadow($params){
-    -webkit-box-shadow: $params rgba(0,0,0,1);
-    -moz-box-shadow: $params rgba(0,0,0,1);
-    box-shadow: $params rgba(0,0,0,1);
-}
-
-@mixin noselect() {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-@mixin rotate($rot) {
-    -ms-transform: rotate($rot);
-    -webkit-transform: rotate($rot); 
-    transform: rotate($rot);
 }
 
 #error_overlay, #js_error {
