--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         <a id="FAQ" class="small" href="@(Url.Action("faq", "Support"))">
             <div style="background-image: url(@Url.Content("~/Images/faq.png"))"></div>
         </a>
-        <a id="contact" class="small" href="#">
+        <a id="contact" class="small" href="@(Url.Action("Contact", "Support"))">
             <div style="background-image: url(@Url.Content("~/Images/contact.png"))"></div>
         </a>
         <a id="déconnection" class="small" href="@Url.Action("Logout", "Account")">
@@ -151,7 +151,7 @@
         if (getCookie("seenResults") == null)
             getMatchResults();
 
-        //createMatchResult_PopUp();
+        createMatchResult_PopUp();
     });
 
     $(window).on('resize', function () {
